tests/pos/i1792.scala
import scala.language.`3.0-migration`
object Test {

def foo(x: Int)
{
  x
}

}
